<resources>
    <string name="app_name">AppTheMovie</string>
    <string name="enjoy_your_life">Enjoy your life!</string>
    <string name="login">Login</string>
    <string name="dont_have_account_create_one">Don\'t have account.Create one?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="TitleLogin">Login</string>
    <string name="textview">TextView</string>
    <string name="describe">Describe</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
</resources>