<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AF000000"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:text="@string/TitleLogin"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:padding="2dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <EditText
                android:id="@+id/edt_user_name"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="User name"
                android:background="@color/white"
                android:fontFamily="sans-serif-light"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/material_dynamic_primary10"
                android:textColorHint="@color/material_dynamic_primary10"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:padding="2dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <EditText
                android:id="@+id/edt_pass"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="User name"
                android:background="@color/white"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/material_dynamic_primary10"
                android:textColorHint="@color/material_dynamic_primary10"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_no_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical|end"
                android:text="@string/dont_have_account_create_one"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/material_dynamic_primary30"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </TableRow>
    </LinearLayout>
</FrameLayout>